--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ProtractorFramework",
+  "name": "protractorframework",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,8 +10,10 @@
   "author": "Chakravarthy N",
   "license": "ISC",
   "dependencies": {
+    "mobile-web-browser-emulator": "0.0.6",
     "mysql": "^2.18.1",
     "pg": "^8.3.0",
-    "protractor": "^7.0.0"
+    "protractor": "^7.0.0",
+    "puppeteer": "^5.2.1"
   }
 }
